crates/goat_linter/src/snapshots/jsdoc_require_property_type.snap
---
source: crates/goat_linter/src/tester.rs
---

  ⚠ eslint-plugin-jsdoc(require-property-type): Missing type in `@property` tag.
   ╭─[require_property_type.tsx:4:17]
 3 │                        * @typedef {SomeType} SomeTypedef
 4 │                        * @property
   ·                          ─────────
 5 │                        */
   ╰────
  help: Add a {type} to this `@property` tag.

  ⚠ eslint-plugin-jsdoc(require-property-type): Missing type in `@property` tag.
   ╭─[require_property_type.tsx:4:17]
 3 │                        * @typedef {SomeType} SomeTypedef
 4 │                        * @property foo
   ·                          ─────────
 5 │                        */
   ╰────
  help: Add a {type} to this `@property` tag.

  ⚠ eslint-plugin-jsdoc(require-property-type): Missing type in `@property` tag.
   ╭─[require_property_type.tsx:4:17]
 3 │                        * @typedef {SomeType} SomeTypedef
 4 │                        * @property foo bar
   ·                          ─────────
 5 │                        */
   ╰────
  help: Add a {type} to this `@property` tag.

  ⚠ eslint-plugin-jsdoc(require-property-type): Missing type in `@property` tag.
   ╭─[require_property_type.tsx:4:17]
 3 │                        * @typedef {SomeType} SomeTypedef
 4 │                        * @prop foo
   ·                          ─────
 5 │                        */
   ╰────
  help: Add a {type} to this `@property` tag.
