crates/goat_linter/src/snapshots/jsdoc_require_returns_description.snap
---
source: crates/goat_linter/src/tester.rs
---

  ⚠ eslint-plugin-jsdoc(require-returns-description): Missing JSDoc `@returns` description.
   ╭─[require_returns_description.tsx:3:17]
 2 │                       /**
 3 │                        * @returns
   ·                          ────────
 4 │                        */
   ╰────
  help: Add description comment to `@returns` tag.

  ⚠ eslint-plugin-jsdoc(require-returns-description): Missing JSDoc `@returns` description.
   ╭─[require_returns_description.tsx:3:17]
 2 │                       /**
 3 │                        * @returns {string}
   ·                          ────────
 4 │                        */
   ╰────
  help: Add description comment to `@returns` tag.

  ⚠ eslint-plugin-jsdoc(require-returns-description): Missing JSDoc `@returns` description.
   ╭─[require_returns_description.tsx:3:17]
 2 │                       /**
 3 │                        * @return
   ·                          ───────
 4 │                        */
   ╰────
  help: Add description comment to `@returns` tag.
