crates/goat_linter/src/snapshots/jsx_a11y_aria_activedescendant_has_tabindex.snap
---
source: crates/goat_linter/src/tester.rs
---

  ⚠ eslint-plugin-jsx-a11y(aria-activedescendant-has-tabindex): Elements with `aria-activedescendant` must be tabbable.
   ╭─[aria_activedescendant_has_tabindex.tsx:1:2]
 1 │ <div aria-activedescendant={someID} />;
   ·  ───
   ╰────
  help: Add a `tabindex` attribute to this div.

  ⚠ eslint-plugin-jsx-a11y(aria-activedescendant-has-tabindex): Elements with `aria-activedescendant` must be tabbable.
   ╭─[aria_activedescendant_has_tabindex.tsx:1:2]
 1 │ <CustomComponent aria-activedescendant={someID} />;
   ·  ───────────────
   ╰────
  help: Add a `tabindex` attribute to this CustomComponent.
